[CrOS MultiDevice] Disable EASY_UNLOCK_HOST when BETTER_TOGETHER_HOST disabled

On the GmsCore side, EASY_UNLOCK_HOST is blacklisted from being
automatically disabled when BETTER_TOGETHER_HOST is disabled. This is
done to prevent CryptAuth from losing the enabled status of EasyUnlock
on host devices that have grandfathered-in EasyUnlock support. In order
to disable EasyUnlock, it must be done so explicitly. Therefore, when
the user chooses to manually disable all Better Together features via the
"Forget this device" button in Chrome OS or a comparable method on Android,
EASY_UNLOCK_HOST should be explicitly disabled in addition to
BETTER_TOGETHER_HOST.

  - before this change, EASY_UNLOCK_HOST was *not* disabled when "Forget
    this device" button was used, and
  - after this change, EASY_UNLOCK_HOST *was* disabled when "Forget this
    device" button was used.

Bug: 881612
Change-Id: If1f1898a8942f9c42a0f5cceb20095ad1ef087d5
Tested: Manually verified that when EASY_UNLOCK_HOST is blacklisted,
Reviewed-on: https://chromium-review.googlesource.com/1212742
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Commit-Queue: Josh Nohle <nohle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589727}