chromeos/services/device_sync/public/cpp/fake_device_sync_client.cc
@@ -62,6 +62,18 @@ int FakeDeviceSyncClient::GetForceSyncNowCallbackQueueSize() {
   return force_sync_now_callback_queue_.size();
 }
 
+int FakeDeviceSyncClient::GetSetSoftwareFeatureStateCallbackQueueSize() {
+  return set_software_feature_state_callback_queue_.size();
+}
+
+int FakeDeviceSyncClient::GetFindEligibleDevicesCallbackQueueSize() {
+  return find_eligible_devices_callback_queue_.size();
+}
+
+int FakeDeviceSyncClient::GetGetDebugInfoCallbackQueueSize() {
+  return get_debug_info_callback_queue_.size();
+}
+
 void FakeDeviceSyncClient::InvokePendingForceEnrollmentNowCallback(
     bool success) {
   DCHECK(force_enrollment_now_callback_queue_.size() > 0);
@@ -77,6 +89,7 @@ void FakeDeviceSyncClient::InvokePendingForceSyncNowCallback(bool success) {
 
 void FakeDeviceSyncClient::InvokePendingSetSoftwareFeatureStateCallback(
     mojom::NetworkRequestResult result_code) {
+  DCHECK(set_software_feature_state_callback_queue_.size() > 0);
   std::move(set_software_feature_state_callback_queue_.front())
       .Run(result_code);
   set_software_feature_state_callback_queue_.pop();
@@ -86,6 +99,7 @@ void FakeDeviceSyncClient::InvokePendingFindEligibleDevicesCallback(
     mojom::NetworkRequestResult result_code,
     cryptauth::RemoteDeviceRefList eligible_devices,
     cryptauth::RemoteDeviceRefList ineligible_devices) {
+  DCHECK(find_eligible_devices_callback_queue_.size() > 0);
   std::move(find_eligible_devices_callback_queue_.front())
       .Run(result_code, eligible_devices, ineligible_devices);
   find_eligible_devices_callback_queue_.pop();
@@ -93,6 +107,7 @@ void FakeDeviceSyncClient::InvokePendingFindEligibleDevicesCallback(
 
 void FakeDeviceSyncClient::InvokePendingGetDebugInfoCallback(
     mojom::DebugInfoPtr debug_info_ptr) {
+  DCHECK(get_debug_info_callback_queue_.size() > 0);
   std::move(get_debug_info_callback_queue_.front())
       .Run(std::move(debug_info_ptr));
   get_debug_info_callback_queue_.pop();
