chromeos/services/device_sync/public/cpp/fake_device_sync_client.h
@@ -30,6 +30,10 @@ class FakeDeviceSyncClient : public DeviceSyncClient {
 
   int GetForceEnrollmentNowCallbackQueueSize();
   int GetForceSyncNowCallbackQueueSize();
+  int GetSetSoftwareFeatureStateCallbackQueueSize();
+  int GetFindEligibleDevicesCallbackQueueSize();
+  int GetGetDebugInfoCallbackQueueSize();
+
   void InvokePendingForceEnrollmentNowCallback(bool success);
   void InvokePendingForceSyncNowCallback(bool success);
   void InvokePendingSetSoftwareFeatureStateCallback(
