chromeos/services/multidevice_setup/host_backend_delegate_impl_unittest.cc
@@ -78,6 +78,11 @@ class MultiDeviceSetupHostBackendDelegateImplTest : public testing::Test {
     delegate_->AddObserver(observer_.get());
   }
 
+  int GetSetSoftwareFeatureStateCallbackQueueSize() {
+    return fake_device_sync_client_
+        ->GetSetSoftwareFeatureStateCallbackQueueSize();
+  }
+
   void InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult result_code,
       bool expected_to_notify_observer_and_start_retry_timer) {
@@ -224,6 +229,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest, Success) {
 
   // Set device 0.
   AttemptToSetMultiDeviceHostOnBackend(test_devices()[0]);
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -236,6 +242,12 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest, Success) {
 
   // Remove device 0 such that there is no longer a host..
   AttemptToSetMultiDeviceHostOnBackend(base::nullopt);
+  // There should be two SetSoftwareFeatureState calls: disable
+  // BETTER_TOGETHER_HOST and disable EASY_UNLOCK_HOST.
+  EXPECT_EQ(2, GetSetSoftwareFeatureStateCallbackQueueSize());
+  InvokePendingSetSoftwareFeatureStateCallback(
+      device_sync::mojom::NetworkRequestResult::kSuccess,
+      false /* expected_to_notify_observer_and_start_retry_timer */);
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -248,6 +260,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest, Success) {
 
   // Set device 1.
   AttemptToSetMultiDeviceHostOnBackend(test_devices()[1]);
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -264,6 +277,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest, Failure) {
 
   // Attempt to set device 0, but fail.
   AttemptToSetMultiDeviceHostOnBackend(test_devices()[0]);
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kOffline,
       true /* expected_to_notify_observer_and_start_retry_timer */);
@@ -275,6 +289,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest, Failure) {
   mock_timer()->Fire();
 
   // Simulate another failure.
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kOffline,
       true /* expected_to_notify_observer_and_start_retry_timer */);
@@ -284,6 +299,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest, Failure) {
 
   // Attempt to set device 1, but fail.
   AttemptToSetMultiDeviceHostOnBackend(test_devices()[1]);
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kOffline,
       true /* expected_to_notify_observer_and_start_retry_timer */);
@@ -318,6 +334,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
   // Fire the callback for device 1, but have it fail. This is not expected to
   // notify the observer or start the retry timer, since the failure was for
   // device 1's request and device 3 is the pending host request.
+  EXPECT_EQ(3, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kOffline,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -328,6 +345,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
   // Fire the callback for device 2, and have it succeed. This should affect the
   // value of GetMultiDeviceHostFromBackend(), but there should still be a
   // pending request for device 3.
+  EXPECT_EQ(2, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -338,6 +356,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
   EXPECT_EQ(test_devices()[2], delegate()->GetMultiDeviceHostFromBackend());
 
   // Fire the callback for device 3, and have it succeed.
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -370,6 +389,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
   EXPECT_EQ(base::nullopt, delegate()->GetMultiDeviceHostFromBackend());
 
   // Fire the first callback, which should successfully transition the host.
+  EXPECT_EQ(3, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -379,6 +399,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
   EXPECT_EQ(test_devices()[0], delegate()->GetMultiDeviceHostFromBackend());
 
   // Fire the second callback, but have it fail. No state should be affected.
+  EXPECT_EQ(2, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kOffline,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -387,6 +408,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
 
   // Fire the third callback, and have it succeed. Still, no state should be
   // affected.
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -400,6 +422,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
 
   // Attempt to set device 0, but fail.
   AttemptToSetMultiDeviceHostOnBackend(test_devices()[0]);
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kOffline,
       true /* expected_to_notify_observer_and_start_retry_timer */);
@@ -411,6 +434,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
   // AttemptToSetMultiDeviceHostOnBackend() again to trigger an immediate retry
   // without the timer.
   AttemptToSetMultiDeviceHostOnBackend(test_devices()[0]);
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -430,6 +454,7 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
 
   // The delegate should have started a request as soon as it was created.
   // Simulate it succeeding.
+  EXPECT_EQ(1, GetSetSoftwareFeatureStateCallbackQueueSize());
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
@@ -447,6 +472,12 @@ TEST_F(MultiDeviceSetupHostBackendDelegateImplTest,
 
   // The delegate should have started a request as soon as it was created.
   // Simulate it succeeding.
+  // There should be two SetSoftwareFeatureState calls: disable
+  // BETTER_TOGETHER_HOST and disable EASY_UNLOCK_HOST.
+  EXPECT_EQ(2, GetSetSoftwareFeatureStateCallbackQueueSize());
+  InvokePendingSetSoftwareFeatureStateCallback(
+      device_sync::mojom::NetworkRequestResult::kSuccess,
+      false /* expected_to_notify_observer_and_start_retry_timer */);
   InvokePendingSetSoftwareFeatureStateCallback(
       device_sync::mojom::NetworkRequestResult::kSuccess,
       false /* expected_to_notify_observer_and_start_retry_timer */);
